Prevent table header jumping

--- a/static/main.css
+++ b/static/main.css
@@ -28,6 +28,18 @@ hr {
     text-align: left;
 }
   
+.table-button {
+    color: #495057;
+    background-color: #e9ecef;
+    border-color: #dee2e6;
+    font-size: 16px;
+    padding: .75rem;
+    border-bottom: 2px solid #dee2e6;
+    border-top: 2px solid #dee2e6;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-weight: 700;    
+}
+
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
